--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -89,6 +89,31 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+
+    <!-- (1) -->
+    <servlet>
+        <servlet-name>restApiServlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+          <param-name>contextClass</param-name>
+          <param-value>
+            org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+          </param-value>
+        </init-param>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <!-- ApplicationContext for Spring MVC (REST) -->
+            <param-value>com.example.todo.config.web.SpringMvcRestConfig</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <!-- (2) -->
+    <servlet-mapping>
+        <servlet-name>restApiServlet</servlet-name>
+        <url-pattern>/api/v1/*</url-pattern>
+    </servlet-mapping>
+
     <servlet>
         <servlet-name>appServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -134,7 +159,7 @@
         <exception-type>java.lang.Exception</exception-type>
         <location>/WEB-INF/views/common/error/unhandledSystemError.html</location>
     </error-page>
-    
+
     <session-config>
         <!-- 30min -->
         <session-timeout>30</session-timeout>
